--- a/main.html
+++ b/main.html
@@ -4,13 +4,30 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		div{
+			background-color:purple;
+			width:200px;
+			border-left:5px solid green;
+			padding:5px;
+			font-size:20px;
+			color:white;
+			
+		}
+		h1{
+			
+		}
+	</style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div>
+		<u>This is a Heading</u>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
-
+     
 </body>
 
 </html>
