--- a/main.html
+++ b/main.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
 
-<html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
-	<style>
-		div{
-			background-color:purple;
-			width:200px;
-			border-left:5px solid green;
-			padding:10px;
-			font-size:20px;
-			color:white;
-			
-		}
-		
-	</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<div>
-		<u>This is a Heading</u>
-	</div>
-	
-    <script type="text/javascript" src="./script.js">
+<!-- the entire body must be written by student -->
+<div class="main">
+<h1 id="heading">This is a Heading</h1>
+</div>
+
+<script type="text/javascript" src="./script.js">
 </script>
-     
+
 </body>
 
 </html>
